<resources>
    <string name="app_name">LateNightChauffeurs</string>

    <string name="forgot">Forgot Password?</string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="signupl"><u>Sign Up</u></string>
    <string name="signup">Sign Up</string>
    <string name="register"><u>Register</u></string>
    <string name="signin">Sign In </string>
    <string name="book_quote">Reservation/Quote Inquiry</string>
    <string name="dropoff">Drop Off Address</string>
    <string name="pinfo">Personal Information</string>
    <string name="savefor">Save as for future reference</string>
    <string name="pickupinfo">Pickup Location Info</string>
    <string name="dropinfo">Drop-off  Location</string>
    <string name="rtext">Fill out the below form to \n book a Reservation with \n "&quot; Late Night Chauffeurs "&quot; </string>
    <string name="connection_subtext">It seems that internet connection is not available, please check your wi-fi or mobile data connection &amp; try again. </string>
    <string name="loading">"Please wait while processing...</string>

    <string name="breservation">Book Reservation</string>
    <string name="bookings">Ride Info</string>
    <string name="futurerides">Future Rides</string>
    <string name="cards">Available Cards</string>
    <string name="service">Change Location</string>
    <string name="address">Drop Addresses</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="upload"><u>Change profile pic</u></string>
    <string name="facebook_app_id">441616232930701</string>
    <string name="fb_login_protocol_scheme">fb441616232930701</string>
    <string name="ride_cost">Ride Cost : </string>
    <string name="book_now">BOOK NOW</string>
    <string name="apply_promo">Apply</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="submit">Submit</string>
    <string name="submit_quote">Submit for Quote/Reservation</string>


    <string name="notification_channel_id">01</string>
    <string name="prominent_disclosure_discription"><b>LateNightChauffeurs</b> App collects location data to enable the App to determine current location for calculating distance and cost between Current Location and Target Location. \n\n This information is accessed even when the app is closed or not in use. It is not used to support any advertising.
        \n\n WE may collect Mac Address, performance data about your device, carrier/operating system including device and connection type, and IP address. Unless you have elected to remain anonymous through your device and/or platform settings, this information may be collected and used by us automatically if you use the User or Driver App through your mobile device(s) via any OUR mobile application, through your mobile’s browser or otherwise.</string>
    <string name="google_map_key">AIzaSyAK7N4kOTSAWpSlzoOQk9_dKp9Sci2sshY</string>
    <string name="notification_permission_denied_message">You won\'t be receiving notification\'s from us. You will miss out exciting offers, exchange rate changes and rewards!. Please press \'OK\' to open app settings</string>
    <string name="notification_permission_denied_title">Please allow us to send notifications</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="note">Note</string>
    <string name="book_my_chauffeur">Book My Chauffeur</string>
    <string name="add_new_card">Add New Card</string>
    <string name="promo_code">Promo Code</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="dbh_booking">DBH Ride Info</string>
    <string name="view_details">View Details</string>
    <string name="ride_status">Ride Status : </string>
    <string name="rate">Rate:</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="ride_date">Ride Date</string>
    <string name="edit_ride_info">Edit Ride Info</string>
    <string name="something_went_wrong">Oops!, Something went wrong, Please try again later</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="driver_details">Driver Details : </string>
    <string name="distance">Distance</string>
    <string name="date">Date : </string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="about_driver">About Driver</string>
    <string name="tip">TIP :</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="_25">25%</string>
    <string name="clear">Clear</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="or">OR</string>
    <string name="add_tip">Add Tip</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="view_coloumn">:</string>
    <string name="base_price">Base Price</string>
    <string name="wait_time">Wait Time</string>
    <string name="unplanned_stops">Unplanned Stops</string>
    <string name="palnned_stops">Planned Stops</string>
    <string name="total_fare">Total Fare</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="reason_for_cancelled_ride">Reason for Cancelled Ride :</string>
    <string name="payment_date">Payment Date</string>
    <string name="drop_location">Drop Location</string>
    <string name="booking_date">Booking Date</string>
    <string name="column">:</string>
    <string name="ride_total_cost">Ride Total Cost</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="payment_summary">Payment Summary</string>


    <array name="indicator_colors">
        <item>#FFFFFFFF</item>
        <!--Default-->
        <item>@color/violet</item>
        <!--Wrong-->
        <item>@color/navigationBarColorSkipped</item>
        <!--Right-->
        <item>@color/colorAccent2</item>
        <!--Skipped-->
        <item>@color/colorAccent2</item>
        <!--Current-->
        <item>@color/navigationBarColorAttempted</item>
        <!--Processed-->

    </array>
    <array name="border_state_colors">
        <item>@color/navigationBarColorAttempted</item>
        <!--Default-->
        <item>@color/violet</item>
        <!--Wrong-->
        <item>@color/navigationBarColorSkipped</item>
        <!--Right-->
        <item>@color/colorAccent2</item>
        <!--Skipped-->
        <item>@color/colorAccent2</item>
        <!--Current-->
        <item>@color/navigationBarColorAttempted</item>
        <!--Processed-->

    </array>

    <array name="text_state_colors">
        <item>@color/black1</item>
        <!--Default-->
        <item>@color/violet</item>
        <!--Wrong-->
        <item>@color/lightGreen</item>
        <!--Right-->
        <item>@color/white1</item>
        <!--Skipped-->
        <item>@color/white1</item>
        <!--Current-->
        <item>@color/white1</item>
        <!--Processed-->
    </array>

</resources>
