<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_reservation"
            android:icon="@drawable/route"
            android:title="@string/breservation"/>
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/portfolio"
            android:title="@string/bookings"/>
      <!--  <item
            android:id="@+id/nav_futurerides"
            android:icon="@drawable/portfolio"
            android:title="@string/futurerides"/>-->
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/payment"
            android:title="@string/cards"/>

       <!-- <item
            android:id="@+id/nav_serviceinfo"
            android:icon="@drawable/info"
            android:title="Change Location" />-->

      <!-- <item
           android:id="@+id/nav_address"
            android:icon="@drawable/location"
            android:title="@string/address"/>-->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/tools"
            android:title="Settings" />

      <!--  <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/payment"
            android:title="@string/payments" />-->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="Logout" />
    </group>
</menu>
