<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_add_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Add Tip"
        app:titleCentered="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/round_keyboard_arrow_left_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_tip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.latenightchauffeurs.Utils.CircularImageView
                android:id="@+id/driverimage"
                android:layout_width="102dp"
                android:layout_height="102dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/appicon"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/color_greendark"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driverimage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white_full"
                        android:text="@string/tip"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintTop_toBottomOf="@+id/tip">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/tip_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_edittext_bg"
                            android:paddingStart="6dp"
                            android:text="@string/_15"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/tip_20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_edittext_bg"
                            android:paddingStart="6dp"
                            android:text="@string/_20"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/tip_25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_edittext_bg"
                            android:paddingStart="6dp"
                            android:text="@string/_25"
                            tools:ignore="RtlSymmetry" />

                    </RadioGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/clear"
                        android:textAllCaps="false"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/btnClear"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtTextNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rectangle_edittext_bg"
                        android:gravity="start"
                        android:hint="@string/tip_amount"
                        android:inputType="number"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:singleLine="true"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView14" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAddTip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_tip"
                        android:textAllCaps="false"
                        app:layout_constraintTop_toBottomOf="@+id/edtTextNotes" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>