<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="@dimen/padding_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_ride_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ride_date"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintEnd_toStartOf="@+id/value_ride_date"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/value_ride_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_ride_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="03-15-2023 04:56 PM" />

        <TextView
            android:id="@+id/label_pickup_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toStartOf="@+id/value_ride_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_ride_date" />

        <TextView
            android:id="@+id/value_pickup_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_ride_date"
            app:layout_constraintTop_toBottomOf="@+id/label_ride_date"
            tools:text="Varkala beach, Trivandram,Kerala , India" />

        <TextView
            android:id="@+id/label_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_pickup_location" />

        <TextView
            android:id="@+id/value_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/label_rate"
            app:layout_constraintTop_toTopOf="@+id/label_rate"
            tools:text="$10.00 per hour" />

        <TextView
            android:id="@+id/label_ride_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_status"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_rate" />

        <TextView
            android:id="@+id/value_ride_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_view_details"
            app:layout_constraintStart_toStartOf="@+id/value_rate"
            app:layout_constraintTop_toBottomOf="@+id/label_rate"
            tools:text="Pending" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:backgroundTint="@color/color_greendark"
            app:layout_constraintEnd_toEndOf="@+id/value_pickup_location"
            app:layout_constraintTop_toTopOf="@+id/label_rate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_ride_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_ride_info"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/value_pickup_location"
            app:layout_constraintTop_toTopOf="@+id/label_rate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>